<resources>
    <string name="app_name">Music Suggestor</string>
    <string name="locationName">Set a Location</string>
    <string name="locationNameLabel">Location Name:</string>
    <string name="setLocationButton">Set Location</string>
    <string name="addCurrentLocationButton">Add Current Location</string>
    <string name="setLocationTitle">Give This Location A Name</string>
    <string name="cancelString">Cancel</string>
    <string name="playListName">Set Up Play List</string>
    <string name="playListLabel">Play List:</string>
    <string name="playRandomSongButton">Play Random Song</string>
    <string name="addSong">Add Song</string>
    <string name="addSongButton">Add Song to Play List</string>
    <string name="removeSongButton">Remove Song from Play List</string>
    <string name="resetPlayer">Reset Media Player</string>
    <string name="predictUserStatusButton">Predict User Status</string>
    <string name="setSongTitle">Select the song to play</string>
    <string name="statusText">Status bar.</string>
    <string name="goToPlayList">Go To Play List</string>
    <string name="songSuggestionButton">Suggest a Song</string>
    <string name="returnToMainScreen">Return to Main Screen</string>
    <string name="goToAdjustLabel">Adjust Speed/Volume</string>
    <string name="titleLabelName">Music Suggestor</string>
    <string name="setVolumeText">Set the Volume:</string>
    <string name="setSpeedText">Set Music Speed:</string>
    <string name="moodSelectLabel">Select Your Mood:</string>
    <string name="goToMood">Set Current Mood</string>
    <string name="downloadSongs">Download Sample Songs</string>
    <string name="playRandomSong">Play Random Song</string>
</resources>
