<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goToPlayListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendToPlayList"
        android:text="@string/goToPlayList"
        app:layout_constraintBottom_toBottomOf="@+id/suggestSongButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:text="@string/goToPlayList" />

    <Button
        android:id="@+id/suggestSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendToSongSuggester"
        android:text="@string/songSuggestionButton"
        app:layout_constraintBottom_toTopOf="@+id/goToAdjustButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToPlayListButton"
        app:layout_constraintVertical_bias="0.7"
        tools:text="@string/songSuggestionButton" />

    <Button
        android:id="@+id/goToLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendToLocations"
        android:text="@string/addCurrentLocationButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/goToAdjustButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendToAdjustments"
        android:text="@string/goToAdjustLabel"
        app:layout_constraintBottom_toTopOf="@+id/goToLocationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestSongButton" />

    <Button
        android:id="@+id/goToMoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendToMoods"
        android:text="@string/goToMood"
        app:layout_constraintBottom_toTopOf="@+id/goToPlayListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>