<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayListActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/setSongTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/setSongTitle" />

    <Button
        android:id="@+id/playSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addSongToList"
        android:text="@string/playSongButton"
        app:layout_constraintBottom_toTopOf="@+id/exitPlayListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songNameLabel"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/addSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addSongToList"
        android:text="@string/addSongButton"
        app:layout_constraintBottom_toTopOf="@+id/exitPlayListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playSongButton"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/removeSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addSongToList"
        android:text="@string/removeSongButton"
        app:layout_constraintBottom_toTopOf="@+id/exitPlayListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSongButton"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/songNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playListLabel"
        app:layout_constraintBottom_toBottomOf="@+id/playSongButton"
        app:layout_constraintEnd_toStartOf="@+id/songEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19"
        tools:text="@string/playListLabel" />

    <AutoCompleteTextView
        android:id="@+id/songEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dropDownHeight="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/playSongButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/songNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/exitPlayListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToMain"
        android:text="@string/returnToMainScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:text="@string/returnToMainScreen" />
</androidx.constraintlayout.widget.ConstraintLayout>