<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdjustmentActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToMain"
        android:text="@string/returnToMainScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:text="@string/returnToMainScreen" />

    <TextView
        android:id="@+id/setVolumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setVolumeText"
        app:layout_constraintBottom_toTopOf="@+id/setSpeedLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setSpeedText"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setVolumeLabel" />

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_marginBottom="113dp"
        android:max="@integer/maxPct"
        app:layout_constraintBottom_toTopOf="@+id/setSpeedLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setVolumeLabel" />

    <SeekBar
        android:id="@+id/seekBarSpeed"
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:max="@integer/maxPct"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setSpeedLabel"
        app:layout_constraintVertical_bias="0.17000002" />

</androidx.constraintlayout.widget.ConstraintLayout>